lets try adding a div for tablet container

--- a/css/style.scss
+++ b/css/style.scss
@@ -1361,6 +1361,10 @@ $lighterskills: #080e31;
                     }
                 }
             }
+            // .tabletcontainer.still {
+            //     position: fixed;
+            //     background-color: $mainblue;
+            // }
         }
     }
 }
