--- a/css/style.scss
+++ b/css/style.scss
@@ -354,8 +354,10 @@ $lighterskills: #080e31;
                                         height: 7vw;
                                     }
                                     p {
-                                        color: white;
+                                        // color: white;
+                                        color: $skillses;
                                         font-size: 2.5vw;
+                                        opacity: .7;
                                         // font-weight: bold;
                                         font-family: 'Roboto', sans-serif;
                                     }
@@ -380,7 +382,9 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
+                                        color: $skillses;
                                         font-size: 2.5vw;
+                                        opacity: .7;
                                         font-family: 'Roboto', sans-serif;
                                     }
                                 }
@@ -404,7 +408,9 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
+                                        color: $skillses;
                                         font-size: 2.5vw;
+                                        opacity: .7;
                                         font-family: 'Roboto', sans-serif;
                                     }
                                 }
@@ -428,7 +434,7 @@ $lighterskills: #080e31;
                                         // margin: 2vh 4vw 0 0;
                                         margin: 2vh 0 0 0;
                                         width: 80vw;
-                                        height: 2vh;
+                                        height: 1vh;
                                         background-color: $mainblue;
                                         border: none;
                                         box-shadow: 3px 3px 5px $boxshadowcircles;
@@ -473,7 +479,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             text-align: center;
                                             font-family: 'Roboto', sans-serif;
                                         }
@@ -498,7 +506,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -522,7 +532,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -543,7 +555,7 @@ $lighterskills: #080e31;
                                     .userinterfacelinetablet {
                                         margin: 0 0 0 0vw;
                                         width: 80vw;
-                                        height: 2vh;
+                                        height: 1vh;
                                         background-color: $mainblue;
                                         border: none;
                                         box-shadow: 3px 3px 5px $boxshadowcircles;
@@ -589,7 +601,9 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
+                                        color: $skillses;
                                         font-size: 2.5vw;
+                                        opacity: .7;
                                         font-family: 'Roboto', sans-serif;
                                     }
                                 }
@@ -614,7 +628,9 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
+                                        color: $skillses;
                                         font-size: 2.5vw;
+                                        opacity: .7;
                                         font-family: 'Roboto', sans-serif;
                                     }
                                 }
@@ -639,7 +655,9 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
+                                        color: $skillses;
                                         font-size: 2.5vw;
+                                        opacity: .7;
                                         font-family: 'Roboto', sans-serif;
                                     }
                                 }
@@ -661,7 +679,7 @@ $lighterskills: #080e31;
                                         // margin: 8vh 3vw 0 0;
                                         margin: 8vh 0 0 0;
                                         width: 80vw;
-                                        height: 2vh;
+                                        height: 1vh;
                                         background-color: $mainblue;
                                         border: none;
                                         box-shadow: 3px 3px 5px $boxshadowcircles;
@@ -704,7 +722,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -729,7 +749,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -754,7 +776,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -777,7 +801,7 @@ $lighterskills: #080e31;
                                             // margin: 8vh 2vw 0 0vw;
                                             margin: 2vh 0 0 0vw;
                                             width: 80vw;
-                                            height: 2vh;
+                                            height: 1vh;
                                             background-color: $mainblue;
                                             border: none;
                                             box-shadow: 3px 3px 5px $boxshadowcircles;
@@ -817,7 +841,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -842,7 +868,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -867,7 +895,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -889,7 +919,7 @@ $lighterskills: #080e31;
                                             // margin: 6vh 2vw 0 0;
                                             margin: 2vh 0 0 0;
                                             width: 80vw;
-                                            height: 2vh;
+                                            height: 1vh;
                                             background-color: $mainblue;
                                             border: none;
                                             box-shadow: 3px 3px 5px $boxshadowcircles;
@@ -928,7 +958,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -952,7 +984,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                             text-align: center;
                                         }
@@ -977,7 +1011,9 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
+                                            color: $skillses;
                                             font-size: 2.5vw;
+                                            opacity: .7;
                                             font-family: 'Roboto', sans-serif;
                                         }
                                     }
@@ -1001,7 +1037,7 @@ $lighterskills: #080e31;
                                     // margin: 8vh 1vw 0 0;
                                     margin: 2vh 0 0 0;
                                     width: 80vw;
-                                    height: 2vh;
+                                    height: 1vh;
                                     background-color: $mainblue;
                                     border: none;
                                     box-shadow: 3px 3px 5px $boxshadowcircles;
@@ -1017,6 +1053,7 @@ $lighterskills: #080e31;
                         background-color: $mainblue;
                         color: white;
                         height: 105vh;
+                        // position: fixed;
                         .topportfoliotablet {
                             display: flex;
                             .titlemobile {
@@ -1029,11 +1066,13 @@ $lighterskills: #080e31;
                         }
                         .topportfoliotablet.darker {
                             opacity: 0;
-                            transition: .8s;
+                            transition: all .8s;
+                            color: $mainblue;
                         }
                         .topportfoliotablet.darker2 {
                             opacity: 1;
                             transition: 1.5s;
+                            color: white;
                         }
                         .botportfoliomobile {
                             display: flex;
@@ -1372,9 +1411,10 @@ $lighterskills: #080e31;
                 }
             }
             .tabletcontainer.no-scroll {
-                opacity: .1;
+                overflow: hidden;
                 position: fixed;
-            }
+                background-color: red;
+             }
         }
     }
 }
