--- a/css/style.scss
+++ b/css/style.scss
@@ -1118,13 +1118,14 @@ $lighterskills: #080e31;
                                 display: block;
                                 background-color: $mainblue;
                                 // background-color: yellowgreen;
-                                margin: 4.5vh 0 0 0;
+                                margin: -5vh 0 0 0;
                                 transition: ease-in .8s;
                                 z-index: 98;
                                 .border {
                                     border: 4px solid $skillswhite;
                                     border-radius: 10px;
                                     margin: 0 auto;
+                                    margin: 10vh 0 0 2.5vw;
                                     width: 88%;
                                     height: 80%;
                                     padding: 2vh;
