--- a/css/style.css
+++ b/css/style.css
@@ -128,16 +128,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
-    width: 45vw;
-    height: 45vw;
+    border: 5px solid #B7BCD6;
+    border-radius: 50%;
+    width: 44vw;
+    height: 44vw;
     background-color: #36395D;
     padding: 1vh;
   }
   * body .tabletcontainer #tablethome .bothometablet .phototablet img {
     border-radius: 50%;
-    width: 37vw;
-    height: 40vw;
+    width: 43vw;
+    height: 43vw;
   }
   * body .tabletcontainer #tablethome .bothometablet .nameheadertablet {
     margin: 6vh 0 0 0;
@@ -1140,6 +1141,49 @@
   }
   * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-1-description.slide-in {
     left: 0;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description {
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    display: block;
+    background-color: #080E2F;
+    margin: 4.5vh 0 0 0;
+    transition: ease-in 0.8s;
+    z-index: 98;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description .bordertwo {
+    border: 4px solid #FFFFFF;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin: 10vh 0 0 2.5vw;
+    width: 88%;
+    height: 80%;
+    padding: 2vh;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description .bordertwo .topleveltwo {
+    display: flex;
+    justify-content: space-between;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description .bordertwo .topleveltwo .app2logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 0 3vw;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description .bordertwo .topleveltwo .app2logo img {
+    width: 36vw;
+    height: 8vw;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description .bordertwo .topleveltwo .sectiontitle {
+    margin: 4vh 5.5vw 0 0;
+  }
+  * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .app-2-description .bordertwo .topleveltwo .sectiontitle p {
+    font-family: "Inter", sans-serif;
+    font-size: 5vw;
+    font-weight: bold;
   }
   * body .tabletcontainer #portfoliotabletcontainer #portfoliotabletdiv .botportfoliomobile .portfoliooutlinetablet {
     display: flex;
